--- a/res/css/transaction-management.css
+++ b/res/css/transaction-management.css
@@ -75,13 +75,12 @@ body {
 }
 
 #transaction-list-container {
-    flex: 0 1 auto;
-    overflow-y: scroll;
-    overflow-x: scroll;
+    flex: 1 1 auto;
+    overflow-y: auto;
+    overflow-x: auto;
     border: 2px solid #999;
     border-radius: 4px;
     min-height: 0;
-    max-height: 10em;
     min-width: 0;
 }
 
